plang/testing/logs/false-incorrect/163/program163.p.p
wjsy J :- (l3m9W, kW (Wq7) (ZDaT) (ob), (skVuZ (L) TF), k4C; pZ (hJ7) z9 SNFr6, (p (CS6S6) (nzEhv (QPu) (SrOuJ)) yVp)).

pbZWv (reqZp p) zc3 :- viO vG (LV), aXl, o f4E z (uePRS ZUNuB) Ym; lN6Ti, (hg4Ko (A)); (uVg NqQa zn BG); jDK (EMn), (mLtqc (l7 WLqU) (cHG o AJ (NckTs)); lS3e WfC (gF3iN) h6KM, wvc f (PFR3u), tidTL (S) (n (y FW q (r)) (vV (HOxt) (f7T (Bre) (Pe) (JF)) Ne (n4u7 (tkDSz (l (b (fUVLE (njPRT (fF))) H9Af (Dcnvj)) pS)) (T5wiP) (K))))).

pK1I (J) (mI (vAw) (VX) (Z)) J08 (uYP (eSwT CqR (iu GX5N (ZfJ6))) (gtL0J)).


og2t (D66Pw).
nH (nbjgm (zHeS3 (i7GM (E) glZjj)) (J)) oMv.
yIsV iIX :- ((xyhjX (nv (F) j (EIdh)) (ojj wS0h) (Hm8F) (x S); uTK GBVd (pS zP N U8l), d)); (rscM9 (OReB) JwlZ (vvHMw ITZ xCiV cwXW2)); vdM8 x (o jON8f (xWhpE qpbL (mF rEIY AhYP))); sY0 (dFuK) U7hVM trMjT, ncvI t2ER raR; xNM84 QWrW XqtYe; fp mH, pZ cJmq m7Kb kskBI (S1vF9).
my9o :- vq4V, (ae4z); g0 B2Fc9, ((e2 (JxCE) (c8Q6 (l5whE (x0 (TIdpg)) (TnSNw) (MFpM) (WBm)) (N) kKeF))); yYs (A) (CGc4y), usi (ph (SQTu2) CL8Sc (FJ) (uK (hVDc (Z) mKbC grCs9 (lJ (knrJv (kP2o)) Dj (u (Jr) (U4)) (VsOq))) xD XwN1Y rHgY)); j6 (t1EAK IhTR (tb25)), zyG (atNFG (e QPnw auAXI H6O) (kl) (m (Kv) (qh s (tRPcU xjg6 Y))) Vz74W) (U16) (UmXL0) i6F; (gQyb O B7 ZGbc (ZDtGk), hMGs Dl TfX aSCs e5kDz, (eHy (hKMjI (aXmp (XN) (FS6IK) f (KcQkQ)) FO7w u41Sk))).
zKY Kd (ldwFf) (q (Bkm)) (Yfv).


wG (UNsK) c (XY) :- ((iqs; yvc (l1) (wt9g zWQe4 ZuAp (Sa) O0) (pYgid jqE DlCBJ z); dfbQW gpByw wqbZ NM (lw))), (f xwZ7 (f yRFr (rk6e) (RJV5)) (DRz) (u2 (ja7A) ri f), kO0w (VSAZ)); ps2 (M5rK) (axz AXFbj (xVB my N) (we)) (jIF dIj0 (vFmaO)) (S), ayt (MqV) r, (f Q); yf TsY1 (l9 eeV8) sH B, (dL (G) rRWu (ik1 (CaP) (TBMjH) (Kg) zM6WQ), hFt2 i (TIM) (Of7)).


gx fM y2yL8 (fBwO (a (F9bEi) (uE) (UTGx))) G :- no0 (azi8 (eOUKl (YK) k) (n (p6Ps hjv) U2ge) sh) (F9), ((iLg9)), ond (Qxqr), uaAA (c YjQ (L)); sb Nb7P (TPxv5) (rNzwU ta (L) (CcH3) dUNs) tQo0, bFmd XW (aS7g EO (e (T) P)) i, rC (AdS) (C) (nk GbTX (UT849) J4mNe); h (k9Mz oMfl (VE5cD) (Yh) (l6l kO (s (mSL I1Ip (C4))) (p (i Y M3Tgp) p))) a (XQ) (V), mWW CB lCdwk; aP E, xfQsT XLlXt p (CC0ni) (gzA (eEEgn (h0yU (E7OpF) Jy (qj tFf Jj r8 E)) (HG0F) ncmmD AAP) (Xj)), d1, xAD liI Ms (h (K) (aQhh (Tp1I) Z417J (kqcZ c) (y)) (l9j Y (DX) KTku a)) (g o6aI APg9Y Fi Re), kLT (N) xb.
bm :- zE2 Kv27b (dGL Z PGS (k (Go))) (XY) d0KI1; ((neh (alLe cVcc (bX1 (gtC (tfBC7 (uAMW (ps) I (s)) (Lhg) (bdjP)) (Nsn1F) PEe8 (g6U)) tNnd)) (ddUJ xVtQ (r1vY h5DQK) (SXG)) q934E)); (gqKq l3Nv4 (h) (h N (D)) (BiP); adM5Q (AelY) Bl571), sN9 (QE) gE8 Ee0y5 eFB, (p L (GE) EHzTW fHF7); (fz xnlYR (snxY) (XvbLZ)); yA8iA Ak72; eHr02 (dK (ebiI (T4s) (PnO) (j9bH (oEae2 YYoi2 (t (Ao) zErkY mqG) (RYm) (Cyi)))) PCJM o (QW0u)) (flLZ (nnMB RMY (fpZ (IRs) (iKQ (OhNRA))) (Is4oU) (nfzDF GKr PL Rz4K)) (bM)); (mJXH X FdlLH (a7v (C))).

? (iD7yk YcR, d9FC (C2i) zW9QY (x), gqcE P4Y (BG5j) (Hk) (sTW hD PVli (r QSY)); c (Mq)), r (DOu4); (iD (l) (SjI); puO9s CDK Iq j (D)); jGa2 (jjS HhnC O) Hd8X4 a3R.

